传入窗体的宽高，和 小视频 花频

--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -6,8 +6,8 @@
     tools:context=".VideoPlayerActivity">
 
     <com.example.lammyopenglffmpegvideoplayer2.LammyOpenglVideoPlayerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/lammy_video_view"
         />
 
